<resources>
    <string name="app_name">TickingMAD V2</string>
    <string name="button_addTick">Add Tick</string>
    <string name="hint_tickTitle">Tick Title</string>
    <string name="hint_tickDescription">Description</string>
    <string name="menu_addTick">Add</string>
    <string name="menu_cancelTick">Cancel</string>
    <string name="menu_saveTick">Save</string>
    <string name="enter_tickTitle"> Please enter a Tick Title </string>
    <string name="save_tick"> Save Tick </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_tickImage">Select Tick image</string>
    <string name="changeImage">Change Image</string>
    <string name="button_tickLocation">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="menu_deleteTick"> Delete Tick </string>
    <string name="title_activity_tickingmad_maps">Map of All Ticks</string>


    <!-- START Firebase Resources-->
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_id">_id</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_splash">Splash</string>
    <string name="action_tickingmadList">TickingmadList</string>

    <string name="tickSpinner">CountyTitle</string>
    <string name="hint_tickCounty">County:</string>

    <string name="tickFavourite">Favourite</string>
    <string name="icon_favourite">Favourite Icon</string>
</resources>