<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    tools:context="org.wit.tickingmad.views.tickingmad.TickingmadView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/Theme.TickingMAD">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/tickTitle"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_tickTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/tickDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_tickDescription"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tickEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tickCounty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:hint="@string/hint_tickCounty"
                    android:padding="20dp"
                    android:visibility="invisible"
                    tools:context=".views.tickingmad.TickingmadView"/>

                <Spinner
                    android:id="@+id/tickSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    tools:context=".views.tickingmad.TickingmadView"
                    android:contentDescription="Select County"/>

                <ToggleButton
                    style="@style/Button"
                    android:id="@+id/tickFavourite"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:checked="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textOff="Add to Favourites"
                    android:textOn="Remove from Favourites"
                    android:drawableStart="@android:drawable/btn_star_big_on"
                    android:drawableEnd="@android:drawable/btn_star_big_on"/>

                <Button
                    style="@style/Button"
                    android:id="@+id/chooseImage"
                    android:text="@string/button_addImage"/>

                <ImageView
                    android:id="@+id/tickImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher"/>

                <Button
                    style="@style/Button"
                    android:id="@+id/tickLocation"
                    android:text="@string/button_tickLocation"/>

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView2"
                    android:layout_width="405dp"
                    android:layout_height="244dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tickImage" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>